--- a/flappy-bird-front-end-game/index.html
+++ b/flappy-bird-front-end-game/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html onclick="jump()">
     <head>
         <meta charset="UTF-8">
         <title>Flappy Bird</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="container" id="container">
-            <div class="block" id="block">
-                <div class="hole" id="hole">
-                    <div class="char" id="character">
-
-                    </div>
-                </div>
-            </div>
+        <div id="container">
+            <div class="bg"></div>
+            <div class="bg bg2"></div>
+            <div class="bg bg3"></div>
+            <div id="bars"></div>
+            <div id="space"></div>
+            <div id="character"></div>
         </div>
     </body>
     <script src="script.js"></script>
